Add photo container

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import 'base/utilities';
 // COMPONENTS
 @import 'components/button';
+@import 'components/photo';
 //LAYOUT
 @import 'layout/footer';
 @import 'layout/grid';
