--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -2,11 +2,10 @@
   &-start {
     display: flex;
     position: relative;
-    // height: 60vh;
+    height: 70vh;
     padding-top: 50px;
 
     &--text {
-      flex: 1;
       display: flex;
       flex-direction: column;
       justify-content: center;
