--- a/sass/main.css
+++ b/sass/main.css
@@ -430,6 +430,22 @@ body {
   position: relative;
 }
 
+.photo {
+  position: absolute;
+  right: 10rem;
+  top: 5rem;
+}
+
+.photo__shape {
+  shape-outside: circle(50% at 50% 50%);
+  -webkit-clip-path: circle(32% at 50% 35%);
+          clip-path: circle(32% at 50% 35%);
+}
+
+.photo__img {
+  width: 40rem;
+}
+
 footer {
   height: 200px;
 }
@@ -812,18 +828,17 @@ footer {
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7));
 }
 
-.section__start {
+.section-start {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   position: relative;
+  height: 70vh;
   padding-top: 50px;
+  background-color: #ccc;
 }
 
-.section__start--text {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+.section-start--text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -839,7 +854,7 @@ footer {
           align-items: center;
 }
 
-.section__start--text .name {
+.section-start--text .name {
   display: block;
   font-size: 5.5rem;
   width: 400px;
@@ -855,27 +870,27 @@ footer {
 }
 
 @media (max-width: 1200px) {
-  .section__start--text .name {
+  .section-start--text .name {
     width: 350px;
     letter-spacing: 25px;
   }
 }
 
 @media (max-width: 900px) {
-  .section__start--text .name {
+  .section-start--text .name {
     width: 283px;
     letter-spacing: 20px;
   }
 }
 
 @media (max-width: 450px) {
-  .section__start--text .name {
+  .section-start--text .name {
     width: 250px;
     letter-spacing: 16px;
   }
 }
 
-.section__start--text .surname {
+.section-start--text .surname {
   display: block;
   font-size: 5.5rem;
   width: 480px;
@@ -890,27 +905,27 @@ footer {
 }
 
 @media (max-width: 1200px) {
-  .section__start--text .surname {
+  .section-start--text .surname {
     width: 420px;
     letter-spacing: 25px;
   }
 }
 
 @media (max-width: 900px) {
-  .section__start--text .surname {
+  .section-start--text .surname {
     width: 365px;
     letter-spacing: 20px;
   }
 }
 
 @media (max-width: 450px) {
-  .section__start--text .surname {
+  .section-start--text .surname {
     width: 300px;
     letter-spacing: 16px;
   }
 }
 
-.section__start--text .web-dev-text {
+.section-start--text .web-dev-text {
   display: inline-block;
   position: relative;
   top: 0px;
@@ -924,74 +939,31 @@ footer {
 }
 
 @media (max-width: 1200px) {
-  .section__start--text .web-dev-text {
+  .section-start--text .web-dev-text {
     letter-spacing: 22px;
   }
 }
 
 @media (max-width: 900px) {
-  .section__start--text .web-dev-text {
+  .section-start--text .web-dev-text {
     letter-spacing: 15px;
   }
 }
 
 @media (max-width: 450px) {
-  .section__start--text .web-dev-text {
+  .section-start--text .web-dev-text {
     font-size: 15px;
   }
 }
 
 @media (max-width: 900px) {
-  .section__start--text {
+  .section-start--text {
     margin-top: 50px;
   }
 }
 
-.section__start--photo {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  text-align: center;
-}
-
-.section__start--photo img {
-  margin: 30px;
-  height: 540px;
-  -webkit-box-shadow: 0 0 0px 15px #233656;
-          box-shadow: 0 0 0px 15px #233656;
-  border-radius: 3px;
-}
-
-@media (max-width: 1200px) {
-  .section__start--photo img {
-    height: 465px;
-    margin-top: 77px;
-  }
-}
-
 @media (max-width: 900px) {
-  .section__start--photo img {
-    height: 444px;
-    margin-top: 90px;
-  }
-}
-
-@media (max-width: 600px) {
-  .section__start--photo img {
-    height: 380px;
-    margin-top: 90px;
-  }
-}
-
-@media (max-width: 450px) {
-  .section__start--photo img {
-    height: 300px;
-    margin-top: 40px;
-  }
-}
-
-@media (max-width: 900px) {
-  .section__start {
+  .section-start {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -1001,39 +973,39 @@ footer {
 }
 
 @media (max-width: 600px) {
-  .section__start {
+  .section-start {
     padding-top: 0px;
   }
 }
 
-.section__about--container {
+.section-about--container {
   position: relative;
   top: 100px;
 }
 
 @media (max-width: 900px) {
-  .section__about--container {
+  .section-about--container {
     top: 0;
   }
 }
 
-.section__about--text {
+.section-about--text {
   padding: 20px;
   width: 80%;
   margin: auto;
 }
 
-.section__about--text p {
+.section-about--text p {
   font-size: 2.4rem;
 }
 
-.section__technology {
+.section-technology {
   position: relative;
   top: 130px;
   min-height: 40vh;
 }
 
-.section__technology--container {
+.section-technology--container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1045,7 +1017,7 @@ footer {
   margin: auto;
 }
 
-.section__technology--container .icon-box {
+.section-technology--container .icon-box {
   position: relative;
   width: 200px;
   height: 300px;
@@ -1057,7 +1029,7 @@ footer {
   text-align: center;
 }
 
-.section__technology--container .icon-box ion-icon {
+.section-technology--container .icon-box ion-icon {
   position: absolute;
   font-size: 20px;
   width: 60%;
@@ -1072,7 +1044,7 @@ footer {
 }
 
 @media (max-width: 900px) {
-  .section__technology--container .icon-box ion-icon {
+  .section-technology--container .icon-box ion-icon {
     width: 40%;
     height: 40%;
     -webkit-transform: translate(-50%, -80%);
@@ -1080,7 +1052,7 @@ footer {
   }
 }
 
-.section__technology--container .icon-box i {
+.section-technology--container .icon-box i {
   position: relative;
   font-size: 100px;
   color: #cdd6d5;
@@ -1090,35 +1062,35 @@ footer {
 }
 
 @media (max-width: 900px) {
-  .section__technology--container .icon-box i {
+  .section-technology--container .icon-box i {
     font-size: 70px;
     -webkit-transform: translate(0%, 10%);
             transform: translate(0%, 10%);
   }
 }
 
-.section__technology--container .icon-box:hover ion-icon {
+.section-technology--container .icon-box:hover ion-icon {
   -webkit-transform: translate(-50%, -80%);
           transform: translate(-50%, -80%);
   width: 40%;
   height: 40%;
 }
 
-.section__technology--container .icon-box:hover i {
+.section-technology--container .icon-box:hover i {
   font-size: 70px;
 }
 
-.section__technology--container .icon-box:hover .icon-details {
+.section-technology--container .icon-box:hover .icon-details {
   bottom: 0;
 }
 
 @media (max-width: 450px) {
-  .section__technology--container .icon-box {
+  .section-technology--container .icon-box {
     height: 250px;
   }
 }
 
-.section__technology--container .icon-details {
+.section-technology--container .icon-details {
   position: absolute;
   bottom: -120px;
   width: 100%;
@@ -1131,7 +1103,7 @@ footer {
   background-color: #415b76;
 }
 
-.section__technology--container .icon-details span {
+.section-technology--container .icon-details span {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1143,19 +1115,19 @@ footer {
 }
 
 @media (max-width: 900px) {
-  .section__technology--container .icon-details {
+  .section-technology--container .icon-details {
     bottom: 0;
   }
 }
 
 @media (max-width: 450px) {
-  .section__technology--container .icon-details {
+  .section-technology--container .icon-details {
     padding-top: 10px;
   }
 }
 
 @media (max-width: 900px) {
-  .section__technology {
+  .section-technology {
     top: 0;
   }
 }
