--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -4,6 +4,7 @@
     position: relative;
     height: 70vh;
     padding-top: 50px;
+    background-color: $color-start;
 
     &--text {
       display: flex;
