--- a/sass/main.css
+++ b/sass/main.css
@@ -529,6 +529,7 @@ footer {
   z-index: 2;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
+  background-color: #ccc;
 }
 
 @media (max-width: 600px) {
@@ -550,11 +551,11 @@ footer {
 }
 
 .navigation__icon {
-  font-size: 30px;
+  font-size: 2rem;
   width: 70px;
   text-align: center;
-  -webkit-transition: all .2s ease-out;
-  transition: all .2s ease-out;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
   border-left: none;
 }
 
@@ -572,13 +573,13 @@ footer {
 
 .navbar {
   height: 100%;
+  float: right;
 }
 
 .navbar__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -591,12 +592,14 @@ footer {
   list-style: none;
   font-size: 1.5rem;
   cursor: pointer;
-  width: 33.33%;
   height: 100%;
   text-align: center;
   letter-spacing: 3px;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  color: #000;
+  padding: 2rem;
+  margin-left: 2rem;
 }
 
 .navbar__list--items a {
@@ -637,7 +640,7 @@ footer {
 }
 
 .a-burger:after {
-  content: '';
+  content: "";
   position: absolute;
   background: white;
   height: 2px;
@@ -646,8 +649,8 @@ footer {
           transform: translateX(-50%);
   left: 50%;
   bottom: 0;
-  -webkit-transition: .35s ease;
-  transition: .35s ease;
+  -webkit-transition: 0.35s ease;
+  transition: 0.35s ease;
 }
 
 .a-burger:hover:after, .a-burger:focus:after, .a-burger:active:after {
@@ -663,12 +666,12 @@ footer {
   width: 40px;
   cursor: pointer;
   z-index: 100;
-  -webkit-transition: opacity .25s ease;
-  transition: opacity .25s ease;
+  -webkit-transition: opacity 0.25s ease;
+  transition: opacity 0.25s ease;
 }
 
 .button_container:hover {
-  opacity: .7;
+  opacity: 0.7;
 }
 
 .button_container.active .top {
@@ -695,8 +698,8 @@ footer {
   position: absolute;
   top: 0;
   left: 0;
-  -webkit-transition: all .35s ease;
-  transition: all .35s ease;
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
   cursor: pointer;
 }
 
@@ -717,37 +720,37 @@ footer {
   height: 0%;
   opacity: 0;
   visibility: hidden;
-  -webkit-transition: opacity .35s, visibility .35s, height .35s;
-  transition: opacity .35s, visibility .35s, height .35s;
+  -webkit-transition: opacity 0.35s, visibility 0.35s, height 0.35s;
+  transition: opacity 0.35s, visibility 0.35s, height 0.35s;
   overflow: hidden;
 }
 
 .overlay.open {
-  opacity: .9;
+  opacity: 0.9;
   visibility: visible;
   height: 100%;
 }
 
 .overlay.open li {
-  -webkit-animation: fadeInRight .5s ease forwards;
-          animation: fadeInRight .5s ease forwards;
-  -webkit-animation-delay: .3s;
-          animation-delay: .3s;
+  -webkit-animation: fadeInRight 0.5s ease forwards;
+          animation: fadeInRight 0.5s ease forwards;
+  -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s;
 }
 
 .overlay.open li:nth-of-type(2) {
-  -webkit-animation-delay: .5s;
-          animation-delay: .5s;
+  -webkit-animation-delay: 0.5s;
+          animation-delay: 0.5s;
 }
 
 .overlay.open li:nth-of-type(3) {
-  -webkit-animation-delay: .7s;
-          animation-delay: .7s;
+  -webkit-animation-delay: 0.7s;
+          animation-delay: 0.7s;
 }
 
 .overlay.open li:nth-of-type(4) {
-  -webkit-animation-delay: .9s;
-          animation-delay: .9s;
+  -webkit-animation-delay: 0.9s;
+          animation-delay: 0.9s;
 }
 
 .overlay.open li:nth-of-type(5) {
@@ -797,7 +800,7 @@ footer {
 }
 
 .overlay ul li a:after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -806,8 +809,8 @@ footer {
           transform: translateX(-50%);
   height: 3px;
   background: black;
-  -webkit-transition: .35s;
-  transition: .35s;
+  -webkit-transition: 0.35s;
+  transition: 0.35s;
 }
 
 .heading-primary--main {
