--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -57,9 +57,9 @@
       height: 100%;
       text-align: center;
       letter-spacing: 3px;
-      transition: all 0.2s;
       color: $color-nav;
       padding: 2rem;
+      padding-bottom: 0;
       margin-left: 2rem;
 
       a {
@@ -74,7 +74,7 @@
       }
 
       &:hover {
-        font-weight: 700;
+        border-bottom: 2px solid $color-nav;
       }
     }
 
