--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,10 +3,11 @@
 .header {
   width: 100%;
   height: 50px;
-  position: relative;
+  position: fixed;
   z-index: 2;
   transition: all 0.5s;
-  background-color: $color-start;
+  background-color: transparent;
+  text-shadow: 2px 2px white;
 
   @include respond(phone) {
     display: none;
