--- a/sass/main.css
+++ b/sass/main.css
@@ -525,11 +525,12 @@ footer {
 .header {
   width: 100%;
   height: 50px;
-  position: relative;
+  position: fixed;
   z-index: 2;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
-  background-color: #ccc;
+  background-color: transparent;
+  text-shadow: 2px 2px white;
 }
 
 @media (max-width: 600px) {
