--- a/sass/main.css
+++ b/sass/main.css
@@ -827,41 +827,22 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: relative;
-  height: 70vh;
-  padding-top: 50px;
-  background-color: #ccc;
-}
-
-.section-start--text {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
+  height: 70vh;
+  background-color: #ccc;
 }
 
 .section-start--text .name {
   display: block;
-  font-size: 5.5rem;
-  width: 400px;
-  margin-bottom: 10px;
-  text-align: center;
-  letter-spacing: 30px;
-  border: 5px solid #cdd6d5;
-  border-radius: 3px;
-  font-weight: 600;
+  font-size: 11rem;
+  letter-spacing: 2rem;
   text-transform: uppercase;
-  background-color: #233656;
-  padding-left: 10px;
+  padding-left: 2rem;
+  color: #999;
+  text-shadow: -10px 0px 2px #fff;
 }
 
 @media (max-width: 1200px) {
@@ -887,16 +868,12 @@ footer {
 
 .section-start--text .surname {
   display: block;
-  font-size: 5.5rem;
-  width: 480px;
-  text-align: center;
-  font-weight: bold;
-  letter-spacing: 25px;
-  border: 5px solid #cdd6d5;
-  border-radius: 3px;
+  font-size: 11rem;
+  letter-spacing: 20px;
   text-transform: uppercase;
-  background-color: #233656;
-  padding-left: 10px;
+  padding-left: 4rem;
+  color: #999;
+  text-shadow: -10px 0px 2px #fff;
 }
 
 @media (max-width: 1200px) {
