--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -1,30 +1,20 @@
 .section {
   &-start {
     display: flex;
+    align-items: center;
     position: relative;
     height: 70vh;
-    padding-top: 50px;
     background-color: $color-start;
 
     &--text {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      // test
       .name {
         display: block;
-        font-size: 5.5rem;
-        width: 400px;
-        margin-bottom: 10px;
-        text-align: center;
-        letter-spacing: 30px;
-        border: 5px solid #cdd6d5;
-        border-radius: 3px;
-        font-weight: 600;
+        font-size: 11rem;
+        letter-spacing: 2rem;
         text-transform: uppercase;
-        background-color: #233656;
-        padding-left: 10px;
+        padding-left: 2rem;
+        color: #999;
+        text-shadow: -10px 0px 2px #fff;
 
         @include respond(tab-land) {
           width: 350px;
@@ -44,16 +34,12 @@
 
       .surname {
         display: block;
-        font-size: 5.5rem;
-        width: 480px;
-        text-align: center;
-        font-weight: bold;
-        letter-spacing: 25px;
-        border: 5px solid #cdd6d5;
-        border-radius: 3px;
+        font-size: 11rem;
+        letter-spacing: 20px;
         text-transform: uppercase;
-        background-color: #233656;
-        padding-left: 10px;
+        padding-left: 4rem;
+        color: #999;
+        text-shadow: -10px 0px 2px #fff;
 
         @include respond(tab-land) {
           width: 420px;
