Change background color - section start

--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -4,7 +4,7 @@
     align-items: center;
     position: relative;
     height: 70vh;
-    background-color: $color-start;
+    background-color: black;
 
     &--text {
       .name {
