--- a/sass/main.css
+++ b/sass/main.css
@@ -823,7 +823,7 @@ footer {
           align-items: center;
   position: relative;
   height: 70vh;
-  background-color: #ccc;
+  background-color: black;
 }
 
 .section-start--text .name {
