--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -1,26 +1,27 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 
 .heading-secondary {
-    font-family: 'Roboto', sans-serif;
-    font-size: 3.5rem;
-    padding: 10px;
-    display: inline-block;
+  font-family: "Montserrat", sans-serif;
+  font-size: 3.5rem;
+  padding: 10px;
+  display: inline-block;
 }
 
 .heading-small {
-    font-family: 'Roboto', sans-serif;
-    text-align: center;
-    font-size: 30px;
-    padding: 30px;
-    margin-bottom: 30px;
+  font-family: "Roboto", sans-serif;
+  text-align: center;
+  font-size: 30px;
+  padding: 30px;
+  margin-bottom: 30px;
 
-    span {
-        padding: 10px;
-        color: #EEF4F2;
-    }
+  span {
+    padding: 10px;
+    color: #eef4f2;
+  }
 
-    @include respond(small-screen) {
-        font-size: 22px;
-        padding: 0;
-    }
+  @include respond(small-screen) {
+    font-size: 22px;
+    padding: 0;
+  }
 }
