--- a/sass/main.css
+++ b/sass/main.css
@@ -828,22 +828,8 @@ footer {
 }
 
 .section-start--text {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  display: inline-block;
+  width: 100%;
 }
 
 .section-start--text .name {
@@ -853,6 +839,8 @@ footer {
   text-transform: uppercase;
   color: #fff;
   font-family: "Montserrat", sans-serif;
+  border-bottom: 8px solid yellow;
+  width: 75%;
 }
 
 @media (max-width: 1200px) {
@@ -880,6 +868,10 @@ footer {
   text-transform: uppercase;
   color: #fff;
   font-family: "Montserrat", sans-serif;
+  border-bottom: 8px solid yellow;
+  width: 75%;
+  float: right;
+  text-align: right;
 }
 
 @media (max-width: 1200px) {
@@ -911,6 +903,7 @@ footer {
   font-family: "Montserrat", sans-serif;
   opacity: 0.8;
   padding-left: 20px;
+  margin-top: 20px;
 }
 
 @media (max-width: 1200px) {
