Test new background color

--- a/sass/main.css
+++ b/sass/main.css
@@ -821,8 +821,8 @@ footer {
           align-items: center;
   position: relative;
   height: 60vh;
-  background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(255, 255, 255, 0.4)), to(rgba(128, 0, 128, 0.5))), url("../../img/anas-alshanti-feXpdV001o4-unsplash.jpg");
-  background-image: linear-gradient(to right bottom, rgba(255, 255, 255, 0.4), rgba(128, 0, 128, 0.5)), url("../../img/anas-alshanti-feXpdV001o4-unsplash.jpg");
+  background-image: -webkit-gradient(linear, left top, right bottom, from(lightgray), to(black)), url("../../img/anas-alshanti-feXpdV001o4-unsplash.jpg");
+  background-image: linear-gradient(to right bottom, lightgray, black), url("../../img/anas-alshanti-feXpdV001o4-unsplash.jpg");
   background-size: cover;
   background-position: center;
 }
