--- a/sass/pages/_section.scss
+++ b/sass/pages/_section.scss
@@ -4,11 +4,7 @@
     align-items: center;
     position: relative;
     height: 60vh;
-    background-image: linear-gradient(
-        to right bottom,
-        rgba(256, 256, 256, 0.4),
-        rgba(128, 0, 128, 0.5)
-      ),
+    background-image: linear-gradient(to right bottom, lightgray, black),
       url("../../img/anas-alshanti-feXpdV001o4-unsplash.jpg");
     background-size: cover;
     background-position: center;
