--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,6 @@
   position: fixed;
   z-index: 2;
   transition: all 0.5s;
-  background-color: rgba(0, 0, 0, 0.2);
   font-family: "Montserrat", sans-serif;
 
   @include respond(phone) {
@@ -64,8 +63,14 @@
 
         height: 100%;
         text-decoration: none;
-        font-size: 2.2rem;
+        font-size: 2rem;
         color: inherit;
+
+        &:hover {
+          border: 2px solid #fff;
+          border-radius: 5px;
+          padding: 5px;
+        }
       }
     }
 
