--- a/sass/main.css
+++ b/sass/main.css
@@ -518,7 +518,6 @@ footer {
   z-index: 2;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
-  background-color: rgba(0, 0, 0, 0.2);
   font-family: "Montserrat", sans-serif;
 }
 
@@ -599,8 +598,14 @@ footer {
           justify-content: center;
   height: 100%;
   text-decoration: none;
-  font-size: 2.2rem;
+  font-size: 2rem;
   color: inherit;
+}
+
+.navbar__list--items a:hover {
+  border: 2px solid #fff;
+  border-radius: 5px;
+  padding: 5px;
 }
 
 @media (max-width: 600px) {
