--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,5 @@
 .header {
   width: 100%;
-  height: 50px;
   position: fixed;
   z-index: 2;
   transition: all 0.5s;
@@ -40,21 +39,22 @@
 }
 
 .navbar {
-  height: 100%;
   float: right;
 
   &__list {
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 50px;
+    margin-right: 10px;
 
     &--items {
       list-style: none;
       letter-spacing: 3px;
       color: #fff;
-      padding: 2rem;
       padding-bottom: 0;
       margin-left: 2rem;
+      width: 100px;
 
       a {
         display: flex;
@@ -66,11 +66,16 @@
         font-size: 2rem;
         color: inherit;
 
-        &:hover {
-          border: 2px solid #fff;
-          border-radius: 5px;
-          padding: 5px;
-        }
+        // &:hover {
+        //   border: 2px solid #fff;
+        //   border-radius: 5px;
+        //   padding: 5px;
+        // }
+      }
+      &:hover {
+        border: 2px solid #fff;
+        border-radius: 5px;
+        padding: 5px;
       }
     }
 
