Add first animation to text border

--- a/sass/main.css
+++ b/sass/main.css
@@ -7,6 +7,23 @@
 */
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+@-webkit-keyframes text-border {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 75%;
+  }
+}
+@keyframes text-border {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 75%;
+  }
+}
+
 @-webkit-keyframes arrow-down-show {
   0% {
     opacity: 0;
@@ -19,6 +36,7 @@
             transform: translate(0);
   }
 }
+
 @keyframes arrow-down-show {
   0% {
     opacity: 0;
@@ -846,6 +864,8 @@ footer {
   font-family: "Montserrat", sans-serif;
   border-bottom: 8px solid yellow;
   width: 75%;
+  -webkit-animation: text-border 3s ease-out;
+  animation: text-border 3s ease-out;
 }
 
 @media (max-width: 1200px) {
