--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -1,106 +1,112 @@
+@keyframes text-border {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 75%;
+  }
+}
+
 @keyframes arrow-down-show {
-    0% {
-        opacity: 0;
-        transform: translateY(10vh);
-    }
-    100% {
-        opacity: 1;
-        transform: translate(0);
-    }
+  0% {
+    opacity: 0;
+    transform: translateY(10vh);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
 }
 
 @keyframes arrow-down {
-    0% {
-        transform: translateY(-5px);
-    }
-    25% {
-        transform: translateY(5px);
-    }
-    50% {
-        transform: translateY(-5px);
-    }
-    75% {
-        transform: translateY(5px);
-    }
-    100% {
-        transform: translateY(-5px);
-    }
+  0% {
+    transform: translateY(-5px);
+  }
+  25% {
+    transform: translateY(5px);
+  }
+  50% {
+    transform: translateY(-5px);
+  }
+  75% {
+    transform: translateY(5px);
+  }
+  100% {
+    transform: translateY(-5px);
+  }
 }
 
 @-webkit-keyframes shine {
-    100% {
-        left: 125%;
-    }
+  100% {
+    left: 125%;
+  }
 }
-    @keyframes shine {
-        100% {
-            left: 125%;
-        }
-    }
-
-@keyframes line-cv-animation{
-
-    0%{
-      width: 0;
-      opacity: 1;
-    }
-  
-    99%{
-      width: 100%;
-      opacity: 1;
-    }
-  
-    100%{
-      width: 100%;
-      opacity: 0;
-    }  
+@keyframes shine {
+  100% {
+    left: 125%;
   }
-  
-  @keyframes open-cv-animation{
-  
-    0%{
-      height: 0;
-      top: 50%;
-    }
-  
-    100%{
-      height: 100vh;
-      top: 0;
-    }
+}
+
+@keyframes line-cv-animation {
+  0% {
+    width: 0;
+    opacity: 1;
   }
 
-  @keyframes fade{
-
-    0%{
-      opacity: 0;
-    }
-  
-    100%{
-      opacity: 1;
-    }
+  99% {
+    width: 100%;
+    opacity: 1;
   }
 
-  @keyframes pulse {
-    0% {
-      transform :scale(.9);
-    }
-    70% {
-      transform: scale(1);
-      // box-shadow: 0 0 0 50px rgba($primary-color, 0);
-    }
-      100% {
-      transform: scale(.9);
-      box-shadow: 0 0 0 0 rgba(#5a99d4, 0);
-    }
+  100% {
+    width: 100%;
+    opacity: 0;
   }
+}
+
+@keyframes open-cv-animation {
+  0% {
+    height: 0;
+    top: 50%;
+  }
+
+  100% {
+    height: 100vh;
+    top: 0;
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(0.9);
+  }
+  70% {
+    transform: scale(1);
+    // box-shadow: 0 0 0 50px rgba($primary-color, 0);
+  }
+  100% {
+    transform: scale(0.9);
+    box-shadow: 0 0 0 0 rgba(#5a99d4, 0);
+  }
+}
 
 @keyframes fadeInRight {
-    0% {
-      opacity: 0;
-      left: 40%;
-    }
-    100% {
-      opacity: 1;
-      left: 0;
-    }
+  0% {
+    opacity: 0;
+    left: 40%;
   }
+  100% {
+    opacity: 1;
+    left: 0;
+  }
+}
