Add animation to another text

--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -7,6 +7,15 @@
   }
 }
 
+@keyframes text-display {
+  0% {
+    display: none;
+  }
+  100% {
+    display: block;
+  }
+}
+
 @keyframes arrow-down-show {
   0% {
     opacity: 0;
