--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,93 +1,91 @@
 .btn {
-    cursor: pointer;
-    text-align: center;
-    display: block;
+  cursor: pointer;
+  text-align: center;
+  display: block;
 
-    &-about {
-        position: absolute;
-        bottom: 10vh;
-        -webkit-animation: arrow-down-show 4s ease-out;
-        animation: arrow-down-show 4s ease-out;
-    }
+  &-about {
+    position: absolute;
+    bottom: 10vh;
+    animation: arrow-down-show 4s ease-out;
+  }
 
-    &-contact {
-        position: relative;
-        bottom: 7vh;
-    }
+  &-contact {
+    position: relative;
+    bottom: 7vh;
+  }
 }
 
 .arrow-animated {
-    position: absolute;
-    display: flex;
-    color: white;
-    font-size: 20px;
-    transition: all .5s;
-    width: 100%;
-    // height: 100%;
-    padding: 10px 0;
-    justify-content: center;
-    opacity: .5;
-    // top: -5px;
+  position: absolute;
+  display: flex;
+  color: white;
+  font-size: 20px;
+  transition: all 0.5s;
+  width: 100%;
+  // height: 100%;
+  padding: 10px 0;
+  justify-content: center;
+  opacity: 0.5;
+  // top: -5px;
 
-    &:hover {
-        // color: $primary-color;
-        opacity: 1;
-    }
+  &:hover {
+    // color: $primary-color;
+    opacity: 1;
+  }
 
-    &--start {
-        -webkit-animation: arrow-down 2s 3s ease-in-out infinite;
-        animation: arrow-down 2s 3s ease-in-out infinite;
-    }
+  &--start {
+    -webkit-animation: arrow-down 2s 3s ease-in-out infinite;
+    animation: arrow-down 2s 3s ease-in-out infinite;
+  }
 
-    &--contact {
-        -webkit-animation: arrow-down 2s ease-in-out infinite;
-        animation: arrow-down 2s ease-in-out infinite;
-    }
-
-}    
+  &--contact {
+    -webkit-animation: arrow-down 2s ease-in-out infinite;
+    animation: arrow-down 2s ease-in-out infinite;
+  }
+}
 
 .button-cv {
-    position: relative;
-    right: 20%;
-    float: right;
-    top: -40%;
-    text-decoration: none;
+  position: relative;
+  right: 20%;
+  float: right;
+  top: -40%;
+  text-decoration: none;
 
-    @include respond(phone) {
-        right: 0;
-        float: none;
-    }
+  @include respond(phone) {
+    right: 0;
+    float: none;
+  }
 }
 
 .button-pulse {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    margin-left: -50px;
-    margin-top: -50px;
-    display: block;
-    width: 100px;
-    height: 100px;
-    font-size: 2.5em;
-    text-transform: uppercase;
-    text-align: center;
-    line-height: 100px;
-    letter-spacing: -1px;
-    color: white;
-    border: none;
-    border-radius: 50%;
-    // background: $primary-color;
-    cursor: pointer;
-    // box-shadow: 0 0 0 0 rgba($primary-color, .5);
-    -webkit-animation: pulse 1.5s infinite;
-    animation: pulse 1.5s infinite;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  margin-left: -50px;
+  margin-top: -50px;
+  display: block;
+  width: 100px;
+  height: 100px;
+  font-size: 2.5em;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 100px;
+  letter-spacing: -1px;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  // background: $primary-color;
+  cursor: pointer;
+  // box-shadow: 0 0 0 0 rgba($primary-color, .5);
+  -webkit-animation: pulse 1.5s infinite;
+  animation: pulse 1.5s infinite;
 
-    &:hover {
-        -webkit-animation: none;
-        animation: none;
-    }
+  &:hover {
+    -webkit-animation: none;
+    animation: none;
+  }
 }
 
-    .arrow-button {
-        position: relative;
-    }
+.arrow-button {
+  position: relative;
+}
