--- a/sass/main.css
+++ b/sass/main.css
@@ -42,6 +42,24 @@
   }
 }
 
+@-webkit-keyframes show-text {
+  0% {
+    z-index: -1;
+  }
+  100% {
+    z-index: 1;
+  }
+}
+
+@keyframes show-text {
+  0% {
+    z-index: -1;
+  }
+  100% {
+    z-index: 1;
+  }
+}
+
 *,
 *::after,
 *::before {
@@ -696,6 +714,7 @@ footer {
   color: #fff;
   font-family: "Montserrat", sans-serif;
   width: 65%;
+  visibility: hidden;
 }
 
 @media (max-width: 1200px) {
@@ -729,6 +748,8 @@ footer {
   float: right;
   text-align: right;
   top: 260px;
+  -webkit-animation: show-text 1s ease-out 3s;
+          animation: show-text 1s ease-out 3s;
 }
 
 @media (max-width: 1200px) {
