--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -54,7 +54,8 @@
       color: #fff;
       padding-bottom: 0;
       margin-left: 2rem;
-      width: 100px;
+      width: 150px;
+      margin-top: 10px;
 
       a {
         display: flex;
