Style start text, put text-align to center

--- a/sass/main.css
+++ b/sass/main.css
@@ -708,14 +708,15 @@ footer {
 .section-start--text .name {
   display: block;
   position: absolute;
-  top: 140px;
+  top: 110px;
   font-size: 11rem;
   letter-spacing: 2rem;
   text-transform: uppercase;
   color: #fff;
   font-family: "Montserrat", sans-serif;
   width: 65%;
-  visibility: hidden;
+  margin-left: 20px;
+  text-align: center;
 }
 
 @media (max-width: 1200px) {
@@ -747,8 +748,9 @@ footer {
   font-family: "Montserrat", sans-serif;
   width: 65%;
   float: right;
-  text-align: right;
-  top: 260px;
+  text-align: center;
+  top: 230px;
+  margin-right: 20px;
   -webkit-animation: show-text 1s ease-out 3s;
           animation: show-text 1s ease-out 3s;
 }
