--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -56,6 +56,7 @@
       margin-left: 2rem;
       width: 150px;
       margin-top: 10px;
+      transition: all 0.1s;
 
       a {
         display: flex;
